shirt and walls

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="room">
+    <div class="person">
     <div class="head">
         <div class="hair">
             <div class="hair-corner"></div>
@@ -26,6 +28,18 @@
             <div class="ear"></div>
         </div>
         
+    </div>
+    <div class="neck"></div>
+    <div class="torso">
+        <div class="shirt"></div>
+        <div class="neckline"></div>
+    </div>
+    </div>
+        <div class="walls">
+            <div class="wallline-1"></div>
+            <div class="wallline-2"></div>
+            <div class="wallline-3"></div>
+        </div>
     </div>
 </body>
 </html>
