--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
     <div class="torso">
         <div class="shirt"></div>
         <div class="neckline"></div>
+        <div class="hand">
+            <img src="dumbbell.png" class="dumb">
+        </div>
+        <div class="hand">
+            <div class="shoulder"></div>
+            <div class="upperarm"></div>
+            <div class="forearm"></div>
+        </div>
     </div>
     </div>
         <div class="walls">
@@ -40,6 +48,7 @@
             <div class="wallline-2"></div>
             <div class="wallline-3"></div>
         </div>
+        
     </div>
 </body>
 </html>
