wave and color change

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
     <div class="torso">
         <div class="shirt"></div>
         <div class="neckline"></div>
-        <div class="hand">
+        <div class="hands">
             <img src="dumbbell.png" class="dumb">
-        </div>
-        <div class="hand">
-            <div class="shoulder"></div>
-            <div class="upperarm"></div>
-            <div class="forearm"></div>
+            <div class="shoulder shoulder-1"></div>
+            <div class="shoulder shoulder-2"></div>
+            <div class="upperarm upperarm-1"></div>
+            <div class="upperarm upperarm-2"></div>
+            <div class="forearm forearm-1"></div>
+            <div class="forearm forearm-2"></div>
         </div>
     </div>
     </div>
@@ -48,7 +49,6 @@
             <div class="wallline-2"></div>
             <div class="wallline-3"></div>
         </div>
-        
     </div>
 </body>
 </html>
